--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -1,17 +1,5 @@
 @charset "UTF-8";
-/*!
-=========================================================
-* LeadMark Landing page
-=========================================================
 
-* Copyright: 2019 DevCRUD (https://devcrud.com)
-* Licensed: (https://devcrud.com/licenses)
-* Coded by www.devcrud.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-*/
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
 :root {
   --blue: #007bff;
@@ -11464,9 +11452,25 @@ textarea.form-control {
   opacity: .8;
 }
 
-.header .overlay .title {
+.header .overlay .title{
+  margin: 20px;
+  border: #000 bold solid;
+}
+
+.header .overlay .title-1 {
   font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1200 - 320)));
   font-weight: bold;
+  background-color: #000;
+  padding: 10px;
+  float: left;
+}
+.header .overlay .title-2 {
+  font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1200 - 320)));
+  font-weight: bold;
+  color: #000;
+  padding: 10px;
+  background-color: white;
+  float: left;
 }
 
 .header .shape svg {
@@ -11496,7 +11500,7 @@ textarea.form-control {
 .header.components-header {
   max-height: 450px !important;
   height: 450px;
-  dispaly: none;
+  display: none;
   background-position: center -140px;
 }
 
