--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -325,6 +325,30 @@ progress {
   height: auto;
 }
 
+.logo{
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-style: solid;
+}
+
+.logo-1 {
+  font-size: 50%;
+  font-weight: bold;
+  color: white;
+  background-color: #000;
+  padding: 10px;
+  float: left;
+}
+.logo-2 {
+  font-size: 50%;
+  font-weight: bold;
+  color: #000;
+  padding: 10px;
+  background-color: white;
+  float: left;
+}
+
 [type="search"] {
   outline-offset: -2px;
   -webkit-appearance: none;
